[package]
name = "discord-league-rank-bot"
version = "0.1.0"
authors = ["baum <lorencalebbaum@gmail.com>"]
edition = "2018"

[dependencies]
riven = "1.10.2"
rustls = "0.18.1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2" # needed so intrument works with async functions.

[dependencies.tokio]
version = "0.2.0"
features = ["macros", "signal"]

[dependencies.serenity]
version = "0.9.1"
features = ["cache", "framework", "standard_framework", "rustls_backend"]